# reproducibility_study

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  UNITS.md  engines.yml  environment.yml  setup.cfg  setup.py
.github/workflows/: main.yml
project/: README.md  __init__.py  dlt  init.py  project-analysis.py  signac_project_document.json
project/src/: dashboard.py  project.py  signac_project_document.json
project/tests/: base_test.py  test_equilbration.py  test_methane_ua.py  test_pentane_ua.py  test_rdf.py  test_spce_water.py  test_system_builder.py
reproducibility_project/: .gitignore  README.md  clean_dicts.py  clean_workspace.py  clear_folder.py  delete_empty_folders.py  find_job.py  init.py  initial_structure_box1.xyz  initial_structure_box2.xyz  matplotlibrc  project-analysis.py  signac.rc
reproducibility_project/.signac/: config
reproducibility_project/aggregate_summary/: FinalFig.ipynb  MainDensities.ipynb  Plotting.ipynb  aggregate_init.py  aggregate_summary_all.csv  aggregate_summary_benzeneUA.csv  aggregate_summary_ethanolAA.csv  aggregate_summary_methaneUA.csv  aggregate_summary_pentaneUA-constrain_bonds.csv  aggregate_summary_pentaneUA-flexible_bonds.csv  aggregate_summary_waterSPCE.csv  analyze_data.py  matplotlibrc  plotting.py  reproducibility_plotting_explore.ipynb
reproducibility_project/hoomd4_subproject/: environment.yml  signac.rc  signac_project_document.json  subproject_init.py
reproducibility_project/lrc_shift_subproject/: clean_dicts.py  signac.rc  subproject-analysis.py  subproject-init.py
(+1348 files in other folders)
