[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[metadata]
name = reproducibility_study
version = 0.0.1
description = MoSDeF collaborative reproducibility study and test case

[options]
packages=find:
